--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: elixir
-elixir: 1.0.4
+elixir:
+  - 1.1.0
 otp_release:
-  - 17.1
+  - 18.0
 sudo: false
 before_script:
   - mix deps.get --only test
